updates previous post

--- a/_posts/2020-01-21-The-Body.md
+++ b/_posts/2020-01-21-The-Body.md
@@ -37,4 +37,10 @@ completely.
 Nonetheless, I am half way into this and figure I'll have it completed in
 another couple of hours. Assuming the rest of the content is as enjoyable, I
 think I will be picking up some more of the author's books. No surprise that it
-was number one Sunday Times Bestseller for 2019.
+was number one Sunday Times Bestseller for 2019.  
+  
+Update: Finished reading the book last week, and it was enjoyable all the way. I
+would highly recommend this one, and I'll definitely be picking up some more
+Bryson books.
+
+Next ones up on the reading list are [The Uninhabitable Earth : A Story of the Future](https://www.bookdepository.com/Uninhabitable-Earth-David-Wallace-wells/9780141988870) and [Invisible Women : Exosing Data Bias in a World Designed For Men](https://www.bookdepository.com/Invisible-Women-Caroline-Criado-Perez/9781784741723), the latter of which seems to be a bit more readable, from leafing through the first couple of chapters.
